[tool.poetry]
name = "pymockserver"
version = "1.7.1"
description = "Simple MockServer implemented in python"
authors = ["Kudlaty <kfuks2@gmail.com>"]
license = "GPL-3.0"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.7.1"
version_files = [
    "pyproject.toml:version",
    "pymockserver/main.py:__version__",
    "helm_v2/pymockserver/Chart.yaml:version",
    "helm_v2/pymockserver/values.yaml:tag",
    "helm_v3/pymockserver/Chart.yaml:version",
    "helm_v3/pymockserver/Chart.yaml:appVersion",
    "clients/typescript-node/package.json:version",
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.67.0"
uvicorn = "^0.14.0"
email-validator = "^1.1.3"
diskcache = "^5.2.1"
pyyaml = "^5.4.1"
gunicorn = "^20.1.0"
uvloop = "^0.15.3"
httptools = "^0.2.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"
mypy = "^0.910"
pre-commit = "^2.13.0"
pytest = "^6.2.4"
requests = "^2.26.0"
invoke = "^1.6.0"
gitpython = "^3.1.18"
mergedeep = "^1.3.4"
commitizen = "^2.17.13"
isort = "^5.9.2"
types-PyYAML = "^5.4.3"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 120

[tool.mypy]
python_version = "3.9"
files = ["pymockserver", "tests"]
ignore_missing_imports = true
disallow_untyped_decorators = true
disallow_subclassing_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
