[project]
requires-python = ">=3.11"

[tool.poetry]
name = "pymockserver"
version = "2.0.2"
description = "Simple MockServer implemented in python"
authors = ["Kudlaty <kfuks2@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pyyaml = "^6.0.1"
gunicorn = "^21.2.0"
uvloop = "^0.19.0"
httptools = "^0.6.1"

[tool.poetry.group.dev.dependencies]
httpx = "^0.25.0"
black = "^23.10.1"
flake8 = "^6.1.0"
mypy = "^1.6.1"
pytest = "^7.4.3"
mergedeep = "^1.3.4"
commitizen = "^3.12.0"
isort = "^5.12.0"
types-PyYAML = "^6.0.12"
setuptools = "^68.2.2"

[tool.commitizen]
version_provider = "poetry"
name = "cz_conventional_commits"
version = "2.0.2"
annotated_tag = true
version_files = [
    "pyproject.toml:version",
    "pymockserver/main.py:__version__",
    "helm_v3/pymockserver/Chart.yaml:version",
    "helm_v3/pymockserver/Chart.yaml:appVersion",
    "clients/typescript-node/package.json:version",
]

[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 120

[tool.mypy]
python_version = "3.11"
files = ["pymockserver", "tests"]
ignore_missing_imports = true
disallow_untyped_decorators = true
disallow_subclassing_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
